--- a/website/pages/docs/commands/job/validate.mdx
+++ b/website/pages/docs/commands/job/validate.mdx
@@ -35,7 +35,7 @@ of 1 indicates an error.
 Validate a job with invalid syntax:
 
 ```shell
-$ nomad job validate example.nomad
+$ nomad `job validate example.nomad
 Job validation errors:
 1 error(s) occurred:
 
